--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -10,18 +10,74 @@
         <scene sceneID="iAa-cO-rTi">
             <objects>
                 <tableViewController id="vTl-NQ-R7M" customClass="MainViewController" customModule="MyPlaces" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="jTZ-pU-ZYI">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="85" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="jTZ-pU-ZYI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="JuM-sv-toc">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="JuM-sv-toc" customClass="CustomTableViewCell" customModule="MyPlaces" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="85"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JuM-sv-toc" id="9Td-Gr-o0F">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="85"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HC3-G6-uqz">
+                                            <rect key="frame" x="15" y="10" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="7uC-Nn-RV8"/>
+                                                <constraint firstAttribute="height" constant="65" id="w92-1p-ow8"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VxG-tr-3ma">
+                                            <rect key="frame" x="95" y="9" width="264" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="NFh-qa-0av"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="18"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dTM-fZ-aZF">
+                                            <rect key="frame" x="95" y="35" width="280" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="18" id="cdZ-TN-pLa"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u33-Md-oL0">
+                                            <rect key="frame" x="95" y="54" width="264" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="cZl-Wg-aEa"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="dTM-fZ-aZF" firstAttribute="trailing" secondItem="9Td-Gr-o0F" secondAttribute="trailingMargin" constant="16" id="4Df-Co-amD"/>
+                                        <constraint firstAttribute="bottom" secondItem="u33-Md-oL0" secondAttribute="bottom" constant="10" id="5Nd-rU-PmC"/>
+                                        <constraint firstItem="HC3-G6-uqz" firstAttribute="leading" secondItem="9Td-Gr-o0F" secondAttribute="leading" constant="15" id="5p0-b9-HX3"/>
+                                        <constraint firstItem="VxG-tr-3ma" firstAttribute="leading" secondItem="HC3-G6-uqz" secondAttribute="trailing" constant="15" id="Gwf-mE-idB"/>
+                                        <constraint firstItem="dTM-fZ-aZF" firstAttribute="leading" secondItem="HC3-G6-uqz" secondAttribute="trailing" constant="15" id="Qgr-Fg-XNn"/>
+                                        <constraint firstItem="HC3-G6-uqz" firstAttribute="centerY" secondItem="9Td-Gr-o0F" secondAttribute="centerY" id="TPv-7E-UNy"/>
+                                        <constraint firstItem="VxG-tr-3ma" firstAttribute="top" secondItem="9Td-Gr-o0F" secondAttribute="top" constant="9" id="YdC-w0-qGm"/>
+                                        <constraint firstItem="u33-Md-oL0" firstAttribute="top" secondItem="dTM-fZ-aZF" secondAttribute="bottom" constant="1" id="aOu-j3-HdV"/>
+                                        <constraint firstItem="u33-Md-oL0" firstAttribute="leading" secondItem="HC3-G6-uqz" secondAttribute="trailing" constant="15" id="iSI-U2-kC9"/>
+                                        <constraint firstAttribute="trailing" secondItem="VxG-tr-3ma" secondAttribute="trailing" constant="16" id="lHt-Vh-BCZ"/>
+                                        <constraint firstAttribute="trailing" secondItem="u33-Md-oL0" secondAttribute="trailing" constant="16" id="pra-Xx-ht8"/>
+                                        <constraint firstItem="dTM-fZ-aZF" firstAttribute="top" secondItem="VxG-tr-3ma" secondAttribute="bottom" constant="5" id="v6z-6C-AkY"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="imageOfPlace" destination="HC3-G6-uqz" id="dvd-Yg-I7G"/>
+                                    <outlet property="locationLabel" destination="dTM-fZ-aZF" id="aKu-De-08j"/>
+                                    <outlet property="nameLabel" destination="VxG-tr-3ma" id="8Nr-VM-UFN"/>
+                                    <outlet property="typeLabel" destination="u33-Md-oL0" id="0Pe-uj-wU5"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -33,7 +89,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Z0-K0-AVS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="375" y="-104"/>
+            <point key="canvasLocation" x="373.60000000000002" y="-104.7976011994003"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="YVU-6C-SMe">
